# uriparser

./: CMakeLists.txt
src/: uriparser.def.in  uriparser.exports  uriparser.sym.in
